--- a/Builds/iOS/BlobBeatEmUpiOS/Info.plist
+++ b/Builds/iOS/BlobBeatEmUpiOS/Info.plist
@@ -58,8 +58,6 @@
     <string>UIStatusBarStyleDefault</string>
     <key>UISupportedInterfaceOrientations</key>
     <array>
-      <string>UIInterfaceOrientationPortrait</string>
-      <string>UIInterfaceOrientationPortraitUpsideDown</string>
       <string>UIInterfaceOrientationLandscapeRight</string>
       <string>UIInterfaceOrientationLandscapeLeft</string>
     </array>
@@ -70,9 +68,9 @@
     <key>UnityAddRemoteNotificationCapability</key>
     <false />
     <key>UnityCloudProjectID</key>
-    <string></string>
+    <string />
     <key>UnityCrashSubmissionURL</key>
-    <string></string>
+    <string />
     <key>UnityNotificationDefaultAuthorizationOptions</key>
     <integer>7</integer>
     <key>UnityNotificationRequestAuthorizationForRemoteNotificationsOnAppLaunch</key>
