--- a/Builds/iOS/BlobBeatEmUpiOS/Info.plist
+++ b/Builds/iOS/BlobBeatEmUpiOS/Info.plist
@@ -68,9 +68,9 @@
     <key>UnityAddRemoteNotificationCapability</key>
     <false />
     <key>UnityCloudProjectID</key>
-    <string></string>
+    <string />
     <key>UnityCrashSubmissionURL</key>
-    <string></string>
+    <string />
     <key>UnityNotificationDefaultAuthorizationOptions</key>
     <integer>7</integer>
     <key>UnityNotificationRequestAuthorizationForRemoteNotificationsOnAppLaunch</key>
